# Hirebot-AI

./: README.md
agent_1/: app.py  jobs.json
agent_1/templates/: index.html
mcp_enabled_hirebot_agent2/: .gitignore  README.md  client_server.py  linkedin-scraper.py  pyproject.toml  scoring-calculator.py  shared_models.py
mcp_enabled_hirebot_agent2/templates/: index.html
